--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -11,208 +11,222 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
+
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    <TextView
-        android:id="@+id/text_view_score"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:freezesText="true"
-        android:text="Score: 0"
-        android:textColor="@android:color/black"
-        app:layout_constraintEnd_toEndOf="@+id/text_view_countdown"
-        app:layout_constraintHorizontal_bias="0.519"
-        app:layout_constraintStart_toStartOf="@+id/text_view_countdown"
-        app:layout_constraintTop_toBottomOf="@+id/text_view_countdown" />
-
-    <TextView
-        android:id="@+id/text_view_question_count"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/text_view_score"
-        android:layout_marginStart="8dp"
-        android:freezesText="true"
-        android:text="Question: 1/x"
-        android:textColor="@android:color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_view_difficulty" />
-
-    <TextView
-        android:id="@+id/text_view_category"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/text_view_question_count"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:freezesText="true"
-        android:text="Category: "
-        android:textColor="@android:color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/text_view_difficulty"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/text_view_category"
-        android:layout_marginStart="8dp"
-        android:freezesText="true"
-        android:text="Difficulty: "
-        android:textColor="@android:color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_view_category" />
-
-    <TextView
-        android:id="@+id/text_view_countdown"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="16dp"
-        android:freezesText="true"
-        android:text="00:30"
-        android:textColor="@android:color/black"
-        android:textSize="40sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/text_view_question"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/radio_group"
-        android:layout_below="@+id/imageView41"
-        android:freezesText="true"
-        android:text="QUESTIONS HERE\nQUESTIONS HERE\nQUESTIONS HERE"
-        android:textColor="@android:color/black"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView41" />
-
-        <RadioGroup
-            android:id="@+id/radio_group"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="32dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_question">
+            android:layout_height="match_parent">
 
-            <RadioButton
-                android:id="@+id/radio_button1"
+            <TextView
+                android:id="@+id/text_view_score"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="0dp"
+                android:freezesText="true"
+                android:text="Score: 0"
+                android:fontFamily="@font/baloo"
+                android:textColor="@android:color/black"
+                app:layout_constraintEnd_toEndOf="@+id/text_view_countdown"
+                app:layout_constraintHorizontal_bias="0.519"
+                app:layout_constraintStart_toStartOf="@+id/text_view_countdown"
+                app:layout_constraintTop_toBottomOf="@+id/text_view_countdown" />
+
+            <TextView
+                android:id="@+id/text_view_difficulty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/text_view_category"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="4dp"
+                android:fontFamily="@font/baloo"
+                android:freezesText="true"
+                android:text="Difficulty: "
+                android:textColor="@android:color/black"
+                app:layout_constraintEnd_toEndOf="@+id/text_view_category"
+                app:layout_constraintStart_toStartOf="@+id/text_view_category"
+                app:layout_constraintTop_toBottomOf="@+id/text_view_category" />
+
+            <TextView
+                android:id="@+id/text_view_question_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/text_view_score"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="4dp"
+                android:fontFamily="@font/baloo"
+                android:freezesText="true"
+                android:text="Question: 1/x"
+                android:textColor="@android:color/black"
+                app:layout_constraintEnd_toEndOf="@+id/text_view_difficulty"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/text_view_difficulty" />
+
+            <TextView
+                android:id="@+id/text_view_category"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/text_view_question_count"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/baloo"
+                android:freezesText="true"
+                android:text="Category: "
+                android:textColor="@android:color/black"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/text_view_countdown"
+                android:layout_width="112dp"
+                android:layout_height="68dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="4dp"
+                android:fontFamily="@font/baloo"
+                android:freezesText="true"
+                android:text="00:30"
+                android:textColor="@android:color/black"
+                android:textSize="40sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/text_view_question"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_above="@id/radio_group"
+                android:layout_below="@+id/imageView41"
                 android:freezesText="true"
-                android:text="Option 1" />
+                android:text="QUESTIONS HERE\nQUESTIONS HERE\nQUESTIONS HERE"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView41" />
 
-            <RadioButton
-                android:id="@+id/radio_button2"
+            <RadioGroup
+                android:id="@+id/radio_group"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:freezesText="true"
-                android:text="Option 2" />
+                android:layout_centerVertical="true"
+                android:layout_marginStart="32dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/text_view_question">
 
-            <RadioButton
-                android:id="@+id/radio_button3"
+                <RadioButton
+                    android:id="@+id/radio_button1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:freezesText="true"
+                    android:text="Option 1" />
+
+                <RadioButton
+                    android:id="@+id/radio_button2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:freezesText="true"
+                    android:text="Option 2" />
+
+                <RadioButton
+                    android:id="@+id/radio_button3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:freezesText="true"
+                    android:text="Option 3" />
+
+                <RadioButton
+                    android:id="@+id/radio_button4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:freezesText="true"
+                    android:text="Option 4" />
+
+            </RadioGroup>
+
+            <Button
+                android:id="@+id/button_confirm_next"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/radio_group"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="12dp"
                 android:freezesText="true"
-                android:text="Option 3" />
+                android:text="Confirm"
+                android:backgroundTint="#8B1F1F"
+                android:theme="@style/lionelButton"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/radio_group" />
 
-            <RadioButton
-                android:id="@+id/radio_button4"
-                android:layout_width="match_parent"
+            <ImageView
+                android:id="@+id/imageView41"
+                android:layout_width="167dp"
+                android:layout_height="154dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/text_view_score"
+                app:srcCompat="@drawable/codeee" />
+
+            <androidx.constraintlayout.widget.Group
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:freezesText="true"
-                android:text="Option 4" />
+                app:constraint_referenced_ids="textView47,textView63,textView61,textView52" />
 
-        </RadioGroup>
+            <TextView
+                android:id="@+id/textView47"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="28dp"
+                android:layout_marginEnd="9dp"
+                android:text="2."
+                app:layout_constraintEnd_toEndOf="@+id/textView52"
+                app:layout_constraintEnd_toStartOf="@+id/radio_group"
+                app:layout_constraintStart_toStartOf="@+id/textView52"
+                app:layout_constraintTop_toBottomOf="@+id/textView52" />
 
-    <Button
-        android:id="@+id/button_confirm_next"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/radio_group"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:freezesText="true"
-        android:text="Confirm"
-        android:theme="@style/lionelButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radio_group" />
+            <TextView
+                android:id="@+id/textView63"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="9dp"
+                android:text="4."
+                app:layout_constraintEnd_toEndOf="@+id/textView61"
+                app:layout_constraintEnd_toStartOf="@+id/radio_group"
+                app:layout_constraintStart_toStartOf="@+id/textView61"
+                app:layout_constraintTop_toBottomOf="@+id/textView61" />
 
-    <ImageView
-        android:id="@+id/imageView41"
-        android:layout_width="137dp"
-        android:layout_height="126dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_view_score"
-        app:srcCompat="@drawable/codey_main_cut" />
+            <TextView
+                android:id="@+id/textView61"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="28dp"
+                android:layout_marginEnd="9dp"
+                android:text="3."
+                app:layout_constraintEnd_toEndOf="@+id/textView47"
+                app:layout_constraintEnd_toStartOf="@+id/radio_group"
+                app:layout_constraintStart_toStartOf="@+id/textView47"
+                app:layout_constraintTop_toBottomOf="@+id/textView47" />
 
-        <androidx.constraintlayout.widget.Group
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:constraint_referenced_ids="textView47,textView63,textView61,textView52" />
-
-        <TextView
-            android:id="@+id/textView47"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
-            android:layout_marginEnd="9dp"
-            android:text="2."
-            app:layout_constraintEnd_toEndOf="@+id/textView52"
-            app:layout_constraintEnd_toStartOf="@+id/radio_group"
-            app:layout_constraintStart_toStartOf="@+id/textView52"
-            app:layout_constraintTop_toBottomOf="@+id/textView52" />
-
-        <TextView
-            android:id="@+id/textView63"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="9dp"
-            android:text="4."
-            app:layout_constraintEnd_toEndOf="@+id/textView61"
-            app:layout_constraintEnd_toStartOf="@+id/radio_group"
-            app:layout_constraintStart_toStartOf="@+id/textView61"
-            app:layout_constraintTop_toBottomOf="@+id/textView61" />
-
-        <TextView
-            android:id="@+id/textView61"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
-            android:layout_marginEnd="9dp"
-            android:text="3."
-            app:layout_constraintEnd_toEndOf="@+id/textView47"
-            app:layout_constraintEnd_toStartOf="@+id/radio_group"
-            app:layout_constraintStart_toStartOf="@+id/textView47"
-            app:layout_constraintTop_toBottomOf="@+id/textView47" />
-
-        <TextView
-            android:id="@+id/textView52"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="19dp"
-            android:text="1."
-            app:layout_constraintEnd_toStartOf="@+id/radio_group"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_question" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/textView52"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="19dp"
+                android:text="1."
+                app:layout_constraintEnd_toStartOf="@+id/radio_group"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/text_view_question" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
 
